amimated card and fixed z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -136,6 +136,8 @@ a{
 		&__span-italic {
             font-family: "Instrument Serif",serif;
             font-style: italic;
+            position: relative;
+            z-index: 1;
 		}
 
 		&__span-uppercase {
@@ -150,24 +152,19 @@ a{
         }
 
         &__card{
-            width: 300px;
-            height: 200px;
-            // background: white;
+            width: 200px;
+            height: 270px;
             border-radius: 20px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            animation: floaty 6s ease-in-out infinite;
+            animation: floaty 20s ease-in-out infinite;
         }
 
         @keyframes floaty {
-            0%   { transform: translateY(0) rotate(0) skew(0deg, 0deg); }
-            25%  { transform: translateY(-20px) rotate(2deg) skew(1deg, 0deg); }
-            50%  { transform: translateY(0) rotate(0) skew(0deg, 0deg); }
-            75%  { transform: translateY(20px) rotate(-2deg) skew(-1deg, 0deg); }
-            100% { transform: translateY(0) rotate(0) skew(0deg, 0deg); }
+            0%   { transform: translateY(-80px) translateX(200px) rotate(5deg) skew(-3deg, -5deg); }
+            25%  { transform: translateY(-310px) translateX(660px) rotate(-50deg) skew(10deg, 5deg); }
+            50%  { transform: translateY(50px) translateX(800px) rotate(-20deg) skew(0deg, 5deg); }
+            75%  { transform: translateY(-360px) translateX(130px) rotate(-60deg) skew(5deg, 0deg); }
+            100% { transform: translateY(-80px) translateX(200px) rotate(5deg) skew(-3deg, -5deg); }
         }
 
         &__column{
@@ -189,7 +186,7 @@ a{
             font-size: 17px;
             padding: 23px 52px 23px 32px;
             border-radius: 100px;
-		    // font-weight: 500;
+		    font-weight: 500;
             transition: all 0.1s ease-in-out;
             &:hover{
                 background-color: #a6a6a6;
